--- a/app/front/view/register/index.html
+++ b/app/front/view/register/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="renderer" content="webkit">
-        <title>登录</title>
+        <title>注册</title>
         <link rel="stylesheet" href="{__STATIC__}/assets/layui/css/layui.css">
         <link rel="stylesheet" href="{__STATIC__}/front/css/pintuer.css">
         <link rel="stylesheet" href="{__STATIC__}/front/css/admin.css">
@@ -17,19 +17,25 @@
         <div class="container">
             <div class="line">
                 <div class="xs6 xm4 xs3-move xm4-move">
-                    <form class="layui-form" action="#" method="post" id="login-form">
+                    <form class="layui-form" action="#" method="post" id="register-form">
                         <div class="panel">
-                            <div class="panel-head"><strong>登录</strong></div>
+                            <div class="panel-head"><strong>注册</strong></div>
                             <div class="panel-body" style="padding:30px;">
                                 <div class="form-group">
                                     <div class="field field-icon-right">
-                                        <input type="text" class="input" name="username" placeholder="登录账号" />
+                                        <input type="text" class="input" name="username" placeholder="账号" />
                                         <span class="icon icon-user"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="field field-icon-right">
-                                        <input type="password" class="input" name="password" placeholder="登录密码" />
+                                        <input type="password" class="input" name="password" placeholder="密码" />
+                                        <span class="icon icon-key"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="field field-icon-right">
+                                        <input type="password" class="input" name="repassword" placeholder="确认密码" />
                                         <span class="icon icon-key"></span>
                                     </div>
                                 </div>
@@ -41,7 +47,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="panel-foot text-center"><button class="button button-block bg-main text-big" lay-submit="" lay-filter="login">立即登录后台</button></div>
+                            <div class="panel-foot text-center"><button class="button button-block bg-main text-big" lay-submit="" lay-filter="register">立即注册后台</button></div>
                         </div>
                     </form>
                 </div>
@@ -51,7 +57,7 @@
     <script language="javascript">
         layui.use(['form'], function () {
             var $ = layui.$, layer = layui.layer, form = layui.form;
-            form.on('submit(login)', function (data) {
+            form.on('submit(register)', function (data) {
                 data = data.field;
 //                if (data.username == '') {
 //                    layer.msg('用户名不能为空');
@@ -61,6 +67,10 @@
 //                    layer.msg('密码不能为空');
 //                    return false;
 //                }
+//                if (data.repassword == '') {
+//                    layer.msg('确认密码不能为空');
+//                    return false;
+//                }
 //                if (data.captcha == '') {
 //                    layer.msg('验证码不能为空');
 //                    return false;
@@ -68,12 +78,12 @@
                 $.ajax({
                     async: false,
                     type: 'post',
-                    url: '/front/login/check',
-                    data: $('#login-form').serialize(),
+                    url: '/front/register/index',
+                    data: $('#register-form').serialize(),
                     dataType: 'json',
                     success: function (res) {
                         if (res.status == 1) {
-                            layer.msg('登录成功', function () {
+                            layer.msg('注册成功', function () {
                                 window.location = '/front/index/index';
                             });
                         } else {
