--- a/app/front/view/register/index.html
+++ b/app/front/view/register/index.html
@@ -84,7 +84,7 @@
                     success: function (res) {
                         if (res.status == 1) {
                             layer.msg('注册成功', function () {
-                                window.location = '/front/index/index';
+                                window.location = '/front/login/index';
                             });
                         } else {
                             layer.msg(res.message);
