--- a/app/front/view/register/index.html
+++ b/app/front/view/register/index.html
@@ -69,29 +69,32 @@
     <script language="javascript">
         layui.use(['form'], function () {
             var $ = layui.$, layer = layui.layer, form = layui.form;
-
-
             $('#receipt').click(function () {
                 var email = $("input[name='email']").val();
-                $.ajax({
-                    async: false,
-                    type: 'post',
-                    url: '/front/register/send_mail',
-                    data: {email:email},
-                    dataType: 'json',
-                    success: function (res) {
-                        if (res.code == 1) {
-                            layer.msg(res.msg);
-                        } else {
-                            layer.msg(res.msg);
-                            return false;
+                var email_reg = /^([\.a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+/;
+                if (!email || !email_reg.test(email)) {
+                    layer.msg('请正确填写Email');
+                    return false;
+                } else {
+                    $.ajax({
+                        async: false,
+                        type: 'post',
+                        url: '/front/register/send_mail',
+                        data: {email: email},
+                        dataType: 'json',
+                        success: function (res) {
+                            if (res.code == 1) {
+                                layer.msg(res.msg);
+                            } else {
+                                layer.msg(res.msg);
+                                return false;
+                            }
+                        },
+                        error: function (data) {
+                            alert("操作失败");
                         }
-                    },
-                    error: function (data) {
-                        alert("操作失败");
-                    }
-                });
-                console.log(email);
+                    });
+                }
                 return false;
             });
 
