--- a/app/admin/view/yoga_cate/edit.html
+++ b/app/admin/view/yoga_cate/edit.html
@@ -60,8 +60,8 @@
                         parent.location.reload();
                     }, 1000);
                 }
-            }
-            tool.post("/admin/article_cate/edit", data.field, callback);
+            };
+            tool.post("/admin/yoga_cate/edit", data.field, callback);
             return false;
         });
     }
