--- a/app/front/view/layout/layout.html
+++ b/app/front/view/layout/layout.html
@@ -1,17 +1,3 @@
-<!--<!DOCTYPE html>
-<html>
-    <head>
-        <title>{$title}</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div style="height: 100px;background: #ff1c1c">头部文件</div>
-        {__CONTENT__}
-        <div style="height: 100px;background: #6C95F5">尾部文件</div>
-    </body>
-</html>-->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -21,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="{__STATIC__}/front/css/base.css">
         {block name="css"}{/block}
+        {block name="style"}{/block}
     </head>
     <body>
         <header>
@@ -48,6 +35,8 @@
                 <p>ASHA <br /> YOUGA</p>
             </div>
         </footer>
+        {block name="js"}{/block}
+        {block name="script"}{/block}
     </body>
 </html>
 
