--- a/public/static/front/css/join.css
+++ b/public/static/front/css/join.css
@@ -49,7 +49,7 @@ header .header .header_r p {
   height: 1100px;
   margin-top: 90px;
   position: relative;
-  background: url('../img/pc/joinbanner.png') no-repeat center;
+  background: url('../images/pc/joinbanner.png') no-repeat center;
   background-size: 100% 100%;
 }
 @media screen and (max-width: 1660px) {
@@ -70,14 +70,14 @@ header .header .header_r p {
 @media screen and (max-width: 996px) {
   .banner {
     height: 700px;
-    background: url('../img/mobile/banner.png') no-repeat center;
+    background: url('../images/mobile/banner.png') no-repeat center;
     background-size: 100% 100%;
   }
 }
 @media screen and (max-width: 765px) {
   .banner {
     height: 500px;
-    background: url('../img/mobile/banner.png') no-repeat center;
+    background: url('../images/mobile/banner.png') no-repeat center;
     background-size: 100% 100%;
   }
 }
@@ -159,7 +159,7 @@ header .header .header_r p {
 }
 .product {
   width: 100%;
-  background: url("../img/pc/joinus.png") no-repeat center;
+  background: url("../images/pc/joinus.png") no-repeat center;
   background-size: 100% 100%;
   display: flex;
   font-weight: 100;
@@ -861,7 +861,7 @@ header .header .header_r p {
   width: 100%;
   height: auto;
   padding: 125px 0;
-  background: url("../img/pc/feadbackbg.png") center no-repeat;
+  background: url("../images/pc/feadbackbg.png") center no-repeat;
   background-size: 100% 100% ;
 }
 @media screen and (max-width: 1440px) {
