--- a/public/static/front/css/join.less
+++ b/public/static/front/css/join.less
@@ -44,7 +44,7 @@ header {
 	height: 1100px;
 	margin-top: 90px;
 	position: relative;
-	background: url('../img/pc/joinbanner.png') no-repeat center;
+	background: url('../images/pc/joinbanner.png') no-repeat center;
 	background-size: 100% 100%;
 	@media screen and (max-width:1660px) {
 		height: 1000px;
@@ -58,12 +58,12 @@ header {
 	}
 	@media screen and (max-width:996px) {
 		height: 700px;
-		background: url('../img/mobile/banner.png') no-repeat center;
+		background: url('../images/mobile/banner.png') no-repeat center;
 		background-size: 100% 100%;
 	}
 	@media screen and (max-width:765px) {
 		height: 400px;
-		background: url('../img/mobile/banner.png') no-repeat center;
+		background: url('../images/mobile/banner.png') no-repeat center;
 		background-size: 100% 100%;
 	}
 	.banner_pro {
@@ -134,7 +134,7 @@ header {
 .product {
 	width: 100%;
 	// height: 830px;
-	background: url("../img/pc/joinus.png") no-repeat center;
+	background: url("../images/pc/joinus.png") no-repeat center;
 	background-size: 100% 100%;
 	display: flex;
 	font-weight: 100;
@@ -713,7 +713,7 @@ header {
 	width: 100%;
 	height: auto;
 	padding: 125px 0;
-	background: url("../img/pc/feadbackbg.png") center no-repeat;
+	background: url("../images/pc/feadbackbg.png") center no-repeat;
 	background-size: 100% 100% ;
 	@media screen  and (max-width:1440px){
 		padding: 100px 0;
