--- a/public/static/front/css/kechengliebiao.css
+++ b/public/static/front/css/kechengliebiao.css
@@ -49,7 +49,7 @@ header .header .header_r p {
   height: 1100px;
   margin-top: 90px;
   position: relative;
-  background: url('../img/pc/banner.png') no-repeat center;
+  background: url('../images/pc/banner.png') no-repeat center;
   background-size: 100% 100%;
 }
 @media screen and (max-width: 1660px) {
