--- a/public/static/front/css/kechengliebiao.less
+++ b/public/static/front/css/kechengliebiao.less
@@ -44,7 +44,7 @@ header {
 	height: 1100px;
 	margin-top: 90px;
 	position: relative;
-	background: url('../img/pc/banner.png') no-repeat center;
+	background: url('../images/pc/banner.png') no-repeat center;
 	background-size: 100% 100%;
 	@media screen and (max-width:1660px) {
 		height: 1000px;
