--- a/public/static/front/css/shangpin.css
+++ b/public/static/front/css/shangpin.css
@@ -512,7 +512,7 @@ header .header .header_r p {
   width: 100%;
   box-sizing: border-box;
   padding: 0 50px;
-  background: url("../img/pc/joinus.png") center no-repeat;
+  background: url("../images/pc/joinus.png") center no-repeat;
   background-size: 100% 100%;
 }
 @media screen and (max-width: 560px) {
