--- a/public/static/front/css/shangpin.less
+++ b/public/static/front/css/shangpin.less
@@ -400,7 +400,7 @@ header {
 	box-sizing: border-box;
 	padding: 0 50px;
 	// max-height: 700px;
-	background: url("../img/pc/joinus.png") center no-repeat;
+	background: url("../images/pc/joinus.png") center no-repeat;
 	background-size: 100% 100%;
 	@media screen  and (max-width:560px){
 		flex-direction: column;
@@ -477,7 +477,7 @@ header {
 			align-items: center;
 			justify-content: center;
 		}
-		// background: url("../img/pc/yujia.png") center no-repeat;	
+		// background: url("../images/pc/yujia.png") center no-repeat;	
 		// background-size: 100% 100%;
 		// height: 1000px;
 		
