--- a/app/admin/view/yoga_course/course_list.html
+++ b/app/admin/view/yoga_course/course_list.html
@@ -71,6 +71,9 @@
                         field: 'title',
                         title: '課程標題'
                     }, {
+                        field: 'course_duration',
+                        title: '課程時長'
+                    }, {
                         field: 'sort_order',
                         title: '排序',
                         align: 'center',
