--- a/app/admin/view/yoga_course/read.html
+++ b/app/admin/view/yoga_course/read.html
@@ -26,6 +26,10 @@
             <td>{$detail.course_url}</td>
         </tr>
         <tr>
+            <td class="layui-td-gray">課程時長</td>
+            <td>{$detail.course_duration}</td>
+        </tr>
+        <tr>
             <td class="layui-td-gray">排序</td>
             <td>{$detail.sort_order}</td>
         </tr>
