--- a/app/admin/view/yoga_course/add.html
+++ b/app/admin/view/yoga_course/add.html
@@ -30,6 +30,10 @@
             <td><input type="text" name="course_url" lay-verify="required|url" lay-reqText="請輸入課程鏈接" autocomplete="off" placeholder="請輸入課程鏈接" class="layui-input"></td>
         </tr>
         <tr>
+            <td class="layui-td-gray">課程時長<span>*</span></td>
+            <td><input type="text" name="course_duration" lay-verify="required" lay-reqText="請輸入課程時長" autocomplete="off" placeholder="請輸入課程時長" class="layui-input"></td>
+        </tr>
+        <tr>
             <td class="layui-td-gray">狀態<span>*</span></td>
             <td>
                 <input type="radio" name="status" value="1" title="正常" checked>
