--- a/app/admin/view/yoga_course/edit.html
+++ b/app/admin/view/yoga_course/edit.html
@@ -30,10 +30,14 @@
             <td><input type="text" name="course_url" lay-verify="required|url" lay-reqText="請輸入課程鏈接" autocomplete="off" placeholder="請輸入課程鏈接" class="layui-input" value="{$detail.course_url}"></td>
         </tr>
         <tr>
+            <td class="layui-td-gray">課程時長<span>*</span></td>
+            <td><input type="text" name="course_duration" lay-verify="required" lay-reqText="請輸入課程時長" autocomplete="off" placeholder="請輸入課程時長" class="layui-input" value="{$detail.course_duration}"></td>
+        </tr>
+        <tr>
             <td class="layui-td-gray">狀態<span>*</span></td>
             <td>
                 <input type="radio" name="status" value="1" title="正常" {eq name="$detail.status" value="1"}checked{/eq}>
-                <input type="radio" name="status" value="0" title="下架" {eq name="$detail.status" value="0"}checked{/eq}>
+                       <input type="radio" name="status" value="0" title="下架" {eq name="$detail.status" value="0"}checked{/eq}>
             </td>
         </tr>
         <tr>
