--- a/app/front/view/yoga/course.html
+++ b/app/front/view/yoga/course.html
@@ -12,8 +12,8 @@
     <div class="shop_main">
         <div class="container">
             <div class="shop_name">
-                <p>会员全套课程,</p>
-                <p>送一件瑜伽裤</p>
+                <p>買全套課程,</p>
+                <p>送一件瑜伽褲</p>
             </div>
             <div class="shop_product">
                 <div class="product_l">
@@ -23,45 +23,40 @@
                 </div>
                 <div class="product_r">
                     <div class="name">
-                        瑜伽裤
+                        RSUNNA瑜伽褲
                     </div>
-                    <p>太舒服啦太舒服啦 <br> 太舒服啦太舒服啦</p>
+                    <p>漸進式加壓,親膚舒適。 <br> 台灣機能服飾大廠製造。</p>
                     <div class="content">
-                        制造制造制造制造制造制造制造制造制造制造制造制造
+                        Asha過去常參與機能服飾的測試員與體驗員<br><br>
+                        憑藉瑜伽相關方面的經驗提供產品的調整。<br><br>
+                        更能符合瑜伽方面的相關所需的機能服飾。
                     </div>
                 </div>
             </div>
             <div class="price_list">
                 <div class="price">
-                    <p>全套课程原价 ¥111 <span >
-                            （共计100 多个影片，送瑜伽裤）
-                        </span> </p>
+                    <p>全套課程原價 $5940 <span>（共計60部影片，送瑜伽褲）</span> </p>
                     <div class="content">
-                        <p>限时会员价</p>
-                        <span>¥66666</span>
+                        <p>限時優惠價</p>
+                        <span>$3960</span>
                     </div>
                 </div>
                 <div class="price">
-                    <p>全套课程原价 ¥ 567<span >
-                            （共计100 多个影片，送瑜伽裤）
-                        </span></p>
+                    <p>單一課程原價 $3900<span>（共计60部影片，送瑜伽褲）</span></p>
                     <div class="content">
-                        <p>限时会员价</p>
-                        <span>¥66666</span>
+                        <p>限時優惠價</p>
+                        <span>$1980</span>
                     </div>
+                    <p style="text-align:center">（加購任一系列+$1080）</p>
                 </div>
             </div>
             <div class="go_buy">
                 <div  class="tle">
-                    只有一次机会 <br/>
-                    让你有更多的瑜伽体验
+                    只有一次機會！ <br/>
+                    讓你擁有更多瑜伽課程選擇
                 </div>
-                <div class="btn">
-                    立即购买课程
-                </div>
-                <div class="num">
-                    $00000000
-                </div>
+                <div class="btn">立即購買課程</div>
+                <div class="num">$3960</div>
             </div>
         </div>
     </div>
@@ -72,7 +67,7 @@
             <div class="img">
                 <img src="{__STATIC__}/front/images/pc/shop02.png"  alt="">
             </div>
-            <p>加码送 <br> 弹性瑜伽裤</p>
+            <p>加碼送 <br> 機能彈性瑜伽褲</p>
         </div>
         <div class="brand_r">
             <div class="img">
@@ -87,22 +82,22 @@
             <div class="le_list">
                 <div class="item">
                     <p>上班族</p>
-                    <p>瑜伽课程</p>
+                    <p>瑜伽課程</p>
                 </div>
                 <div class="item">
-                    <p>孕妇</p>
-                    <p>瑜伽课程</p>
+                    <p>孕婦</p>
+                    <p>瑜伽課程</p>
                 </div>
                 <div class="item">
-                    <p>家庭主妇</p>
-                    <p>瑜伽课程</p>
+                    <p>家庭主婦</p>
+                    <p>瑜伽課程</p>
                 </div>
             </div>
             <div class="le_bot">
-                <p>全球唯一一家针对家庭主妇，孕妇，上班族 的瑜伽课程全球唯一一家针对家庭主妇，孕妇，上班族 的瑜伽课程</p>
+                <p>全球唯一針對「家庭主婦、孕婦、上班族」線上瑜伽教學課程,改善體能問題,唯有瑜伽能幫助妳</p>
             </div>
         </div>
-        <!-- <div class="mask">
+<!--         <div class="mask">
                 <img src="{__STATIC__}/front/images/pc/les02.png" alt="">
                 <img src="{__STATIC__}/front/images/pc/les01.png" alt="">
         </div> -->
@@ -120,7 +115,7 @@
                 <div class="letimg">
                     <img src="{__STATIC__}/front/images/pc/tlepng.png" alt="">
                 </div>
-                <p>全套瑜伽课程</p>
+                <p>全套瑜伽課程</p>
                 <div class="letimg">
                     <img src="{__STATIC__}/front/images/pc/tlepng.png" alt="">
                 </div>
@@ -133,37 +128,31 @@
                 </div>
                 <div class="list">
                     <p>
-                        2.上班族瑜伽
+                        2.家庭主婦瑜伽
                     </p>
                 </div>
                 <div class="list">
                     <p>
-                        3.上班族瑜伽
+                        3.孕婦瑜伽
                     </p>
                 </div>
             </div>
             <div class="les_bot">
                 <div class="bot_l">
                     <div class="orgprice">
-                        限时价格：<span>¥0000</span>
+                        全套課程原價：<span>$5940</span>
                     </div>
                     <div class="nowprice">
-                        限时优惠：<span>¥0000</span>
+                        限時優惠價：<span>$3960</span>
                     </div>
-                    <div class="all_slims">
-                        （共计60多部电影）
-                    </div>
-                    <div class="btn">
-                        立即购买课程
-                    </div>
+                    <div class="all_slims">（共計60部影片,送瑜伽褲）</div>
+                    <div class="btn">立即購買課程</div>
                 </div>
                 <div class="bot_r">
                     <img src="{__STATIC__}/front/images/pc/lesbg.png" alt="">
                 </div>
-
             </div>
         </div>
-
     </div>
 </section>
 {/block}
