--- a/app/front/view/layout/layout.html
+++ b/app/front/view/layout/layout.html
@@ -26,7 +26,7 @@
             <div class="header">
                 <div class="header_l"></div>
                 <div class="header_r">
-                    <p>會員升級</p>
+                    <p class="member-upgrade">會員升級</p>
                     <p class="dengru">登入</p>
                 </div>
             </div>
@@ -49,10 +49,13 @@
         {block name="js"}{/block}
         <script>
             $('.dengchu').click(function () {
-                window.location.href = "/front/logout/index";
+                window.location.href = "{:url('/front/logout/index')}";
             });
             $('.dengru').click(function () {
-                window.location.href = "/front/login/index";
+                window.location.href = "{:url('/front/login/index')}";
+            });
+            $('.member-upgrade').click(function () {
+                window.location.href = "{:url('/front/yoga/course')}";
             });
         </script>
         {block name="script"}{/block}
